tests/type/errors/bad_return5.xi
foo():bool {
    x:int = 1
    if x == 1 {
        return true
    }
    else {
        return 1
    }
    return false
}